log
Thu 05 Oct 2023 05:01:08 PM UTC: 
 tests:  0|5
total_score: 0/70
0fe4b9e
Thu 05 Oct 2023 05:06:43 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:13: error: ‘adj_node’ undeclared (first use in this function)
   61 |             adj_node->sudo[i][j] = k;
      |             ^~~~~~~~
sudoku.c:61:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
   69 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f480af9
Thu 05 Oct 2023 05:07:16 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9fbdf74
Thu 05 Oct 2023 05:07:33 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
8e54ea2
Thu 05 Oct 2023 05:08:17 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0e6520b
Thu 05 Oct 2023 05:08:34 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f85c992
